# JSCIPOpt

./: .gitignore  CMakeLists.txt  Constraint.java  INSTALL.md  Makefile  README.md  Scip.java
examples/: CustomExpressionHandler.java  Linear.java  Multiknapsack.java  Nonlinear.java  Quadratic.java  Read.java  run.sh
java/: SCIPJNI.java  SCIPJNIJNI.java  SCIP_Retcode.java  SCIP_Vartype.java  SWIGTYPE_p_FILE.java  SWIGTYPE_p_SCIP.java  SWIGTYPE_p_SCIP_CONS.java  SWIGTYPE_p_SCIP_SOL.java  SWIGTYPE_p_SCIP_VAR.java  SWIGTYPE_p_double.java  SWIGTYPE_p_p_SCIP.java  SWIGTYPE_p_p_SCIP_SOL.java  SWIGTYPE_p_p_SCIP_VAR.java  Solution.java  Variable.java  main.java
java/jscip/: ByteBuffer.java  Constraint.java  Expression.java  ExpressionHandler.java  ExpressionIntEvalVarCallback.java  ExpressionOwnerCreateCallback.java  Interval.java  MessageHandler.java  ObjCloneable.java  ObjExprhdlr.java  ObjMessagehdlr.java  SCIPJNI.java  SCIPJNIJNI.java  SCIP_BoundType.java  SCIP_EXPRCURV.java  SCIP_EXPRDATA.java  SCIP_Interval.java  SCIP_MONOTONE.java  SCIP_Objsense.java  SCIP_OrbitopeType.java  SCIP_ParamEmphasis.java  SCIP_Retcode.java  SCIP_Stage.java  SCIP_Status.java  SCIP_Vartype.java  SCIP_VerbLevel.java  SWIGTYPE_p_FILE.java  SWIGTYPE_p_SCIP.java  SWIGTYPE_p_SCIP_BoundType.java  SWIGTYPE_p_SCIP_CONS.java  SWIGTYPE_p_SCIP_EXPR.java  SWIGTYPE_p_SCIP_EXPRCURV.java  SWIGTYPE_p_SCIP_EXPR_INTEVALVAR.java  SWIGTYPE_p_SCIP_EXPR_OWNERCREATE.java  SWIGTYPE_p_SCIP_Exprhdlr.java  SWIGTYPE_p_SCIP_HEUR.java  SWIGTYPE_p_SCIP_MONOTONE.java  SWIGTYPE_p_SCIP_Messagehdlr.java  SWIGTYPE_p_SCIP_SOL.java  SWIGTYPE_p_SCIP_VAR.java  (+22 more)
make/: make.mingw.x86.msvc.dbg  make.mingw.x86.msvc.opt  make.mingw.x86_64.msvc.dbg  make.mingw.x86_64.msvc.opt  make.project
src/: scipjni.i  scipjni_wrap.c  scipjni_wrap.cxx  scipjni_wrap.h
